# el-dojo-admin-db

./: .env.example  .gitignore  README.md  alembic.ini  despliegue-vps-eldojo.md  docker-compose.local.yml  pyproject.toml  schema.sql
alembic/: env.py  script.py.mako
alembic/versions/: 20260620_0001_initial_schema.py  20260720_0002_add_user_names.py
app/: __init__.py
app/core/: __init__.py  config.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  curriculum.py  enums.py  events.py  finance.py  mixins.py  organization.py  student.py  teaching.py  user.py
eldojo_data_layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rules/: ai-project-directrices.md
scripts/: __init__.py  seed.py
